Fix search button firefox issue

--- a/wp-content/themes/Forsite/assets/styles/common/_global.scss
+++ b/wp-content/themes/Forsite/assets/styles/common/_global.scss
@@ -36,3 +36,6 @@ body,
 #site {
     height: 100%;
 }
+.relative {
+    position: relative;
+}
