--- a/wp-content/themes/Forsite/assets/styles/components/_navmenu.scss
+++ b/wp-content/themes/Forsite/assets/styles/components/_navmenu.scss
@@ -83,5 +83,6 @@
     font-size: 1.5rem; /* 30/18 */
     line-height: 1;
     position: absolute;
-    right: .5rem;
+    right: .5rem; 
+    top: .65rem;
 }
